# CoastalCodebook

./: .buildinfo  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  content.html  environment-coastal.yml  environment-jupyterlab.yml  environment.yml  genindex.html  gradebook.db  intro.html  markdown-notebooks.html  markdown.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/: dependabot.yml
_sources/: markdown-notebooks.ipynb
about/: acknowledgements.html  introduction.html  structure.html
assignments/: 01_coastal_classification.html  01_introduction.html  02_coastal_classification.html  02_the_tide.html  02_tidal_constituents.html  03_tidal_constituents.html  03_tidal_inlets.html  04_tidal_inlets.html  1_coastal_classification.html
book/: _config.yml  _toc.yml  intro.md
coastalcodebook/: _toc.yml  references.bib
completed/: 2a_pre_knowledge_waves-answered.ipynb  2b_wave_dispersion_and_grouping_answered.ipynb  3b_wave_asymmetry_and_skewness_answered.ipynb  3c_radiation_stresses_and_wave_forces_answered.ipynb  4a_bound_long_wave_answered.ipynb
cookbook/: cookbook.ipynb  question_types.ipynb
data/: 01_coastal_systems.csv  01_coastal_systems.gpkg  02_amplitudes.gpkg  02_j1.p  02_k1.p  02_k2.p  02_m2.p  02_m4.p  02_m6.p  02_meiv2.data  02_mf.p  02_mm.p  02_mn4.p  02_n2.p  02_o1.p  02_p1.p  02_q1.p  02_s2.p  02_s4.p  02_ssa.p  03_CoastSat_metadata_layer_Pacific.geojson  03_coastsat_transects.parquet  shorelines_ocean_beach.parquet
introduction/: 01_basics.html  02_loops_and_functions.html
jupyterbook/: _toc.yml
notebooks/: 01_coastal_classification.ipynb  02_the_tide.ipynb  (+60 more)
(+394 files in other folders)
